--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.11.6",
+    "fiery": "^0.2.0-3",
+    "firebase": "^5.7.2",
+    "nprogress": "^0.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-qr-reader": "^2.1.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
