--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "dependencies": {
     "antd": "^3.11.6",
+    "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "fiery": "^0.2.0-3",
     "firebase": "^5.7.2",
     "nprogress": "^0.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-qr-reader": "^2.1.1",
-    "react-scripts": "2.1.2"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "source-map-explorer": "^1.6.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
