--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "core-js": "^2.6.2",
     "fiery": "^0.2.0-3",
     "firebase": "^5.7.2",
     "nprogress": "^0.2.0",
